--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "debug": "node --experimental-specifier-resolution=node",
     "lint": "eslint -p .eslintrc.json",
     "test": "jest --passWithNoTests"
   },
